@@ -36,6 +36,25 @@ describe "PartsList" do
     expect(p.sort!(order)).to eq [plain_text_part, html_text_part, no_content_type_part]
   end
 
+  it "should sort attachments to end" do
+    p = Mail::PartsList.new
+    order = ['text/plain', 'text/html']
+
+    attachment_part = Mail::Part.new
+    html_text_part  = Mail::Part.new
+    plain_text_part = Mail::Part.new
+
+    attachment_part.content_type        = 'text/plain; filename="foo.txt"'
+    attachment_part.content_disposition = 'attachment; filename="foo.txt"'
+
+    html_text_part.content_type = 'text/html'
+
+    p << attachment_part
+    p << html_text_part
+    p << plain_text_part
+    p.sort!(order).should eq [plain_text_part, html_text_part, attachment_part]
+  end
+
   it "should have a parts reader" do
     p = Mail::PartsList.new([1, 2])
     expect(p.parts).to eq([1, 2])
